创建并未HTTPRequest编写基本功能（顺便发现了）Uri这个神奇的类

--- a/SophieHTTP/SophieHTTP.csproj
+++ b/SophieHTTP/SophieHTTP.csproj
@@ -44,8 +44,8 @@
     <Compile Include="Class1.cs" />
     <Compile Include="HTTPResolve\CommonHeader.cs" />
     <Compile Include="HTTPResolve\HTTPHeader.cs" />
-    <Compile Include="HTTPResolve\HTTPMethod.cs" />
     <Compile Include="HTTPResolve\HTTPRequest.cs" />
+    <Compile Include="HTTPResolve\HTTPUtils.cs" />
     <Compile Include="HTTPResolve\TestHeader.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
