--- a/SophieHTTP/SophieHTTP.csproj
+++ b/SophieHTTP/SophieHTTP.csproj
@@ -41,7 +41,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
     <Compile Include="HTTPResolve\CommonHeader.cs" />
     <Compile Include="HTTPResolve\HTTPHeader.cs" />
     <Compile Include="HTTPResolve\HTTPRequest.cs" />
@@ -49,9 +48,11 @@
     <Compile Include="HTTPResolve\HTTPResponse.cs" />
     <Compile Include="HTTPResolve\HTTPUtils.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProxyService\LigthHTTPProxyServer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="HTTPResolve\ClassDiagram2.cd" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
